--- a/files/任旅视界/styles.css
+++ b/files/任旅视界/styles.css
@@ -3766,7 +3766,7 @@
   font-weight:400;
   font-style:normal;
   font-size:14px;
-  color:#AAAAAA;
+  color:#000000;
 }
 #u116 {
   border-width:0px;
@@ -3780,7 +3780,7 @@
   font-weight:400;
   font-style:normal;
   font-size:14px;
-  color:#AAAAAA;
+  color:#000000;
 }
 #u116 .text {
   position:absolute;
